tests/ui/threads-sendsync/issue-43733.thir.stderr
error[E0133]: call to unsafe function `Key::<T>::get` is unsafe and requires unsafe function or block
  --> $DIR/issue-43733.rs:19:5
   |
LL |     __KEY.get(Default::default)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `LocalKey::<T>::new` is unsafe and requires unsafe function or block
  --> $DIR/issue-43733.rs:24:42
   |
LL | static FOO: std::thread::LocalKey<Foo> = std::thread::LocalKey::new(__getit);
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
